--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -3,3 +3,9 @@ edu.prz.bomsystem.authority.ui.user.LoginView.loginTitle=Zaloguj się
 edu.prz.bomsystem.authority.ui.user.LoginView.username=Użytkownik
 edu.prz.bomsystem.authority.ui.user.LoginView.password=Hasło
 edu.prz.bomsystem.authority.ui.user.LoginView.loginButton=Zaloguj
+
+edu.prz.bomsystem.system.ui.MainLayout.signIn=Zaloguj
+edu.prz.bomsystem.system.ui.MainLayout.signOut=Wyloguj
+edu.prz.bomsystem.system.ui.MainLayout.assemblies=Monta?
+
+edu.prz.bomsystem.foundation.ui.view.ListView.pageTitle=Widok Listy
