--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,3 +3,9 @@ edu.prz.bomsystem.authority.ui.user.LoginView.loginTitle=Log in
 edu.prz.bomsystem.authority.ui.user.LoginView.username=Username
 edu.prz.bomsystem.authority.ui.user.LoginView.password=Password
 edu.prz.bomsystem.authority.ui.user.LoginView.loginButton=Log in
+
+edu.prz.bomsystem.system.ui.MainLayout.signIn=Sign In
+edu.prz.bomsystem.system.ui.MainLayout.signOut=Sign Out
+edu.prz.bomsystem.system.ui.MainLayout.assemblies=Assemblies
+
+edu.prz.bomsystem.foundation.ui.view.ListView.pageTitle=ListView
