--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -9,3 +9,4 @@ edu.prz.bomsystem.system.ui.MainLayout.signOut=Wyloguj
 edu.prz.bomsystem.system.ui.MainLayout.assemblies=Monta?
 
 edu.prz.bomsystem.foundation.ui.view.ListView.pageTitle=Widok Listy
+edu.prz.bomsystem.products.components.ui.ComponentsListView.pageTitle=Komponenty
