--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,3 +9,4 @@ edu.prz.bomsystem.system.ui.MainLayout.signOut=Sign Out
 edu.prz.bomsystem.system.ui.MainLayout.assemblies=Assemblies
 
 edu.prz.bomsystem.foundation.ui.view.ListView.pageTitle=ListView
+edu.prz.bomsystem.products.components.ui.ComponentsListView.pageTitle=Components
