--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,6 +7,24 @@ edu.prz.bomsystem.authority.ui.user.LoginView.loginButton=Log in
 edu.prz.bomsystem.system.ui.MainLayout.signIn=Sign In
 edu.prz.bomsystem.system.ui.MainLayout.signOut=Sign Out
 edu.prz.bomsystem.system.ui.MainLayout.assemblies=Assemblies
+edu.prz.bomsystem.system.ui.MainLayout.components=Components
 
 edu.prz.bomsystem.foundation.ui.view.ListView.pageTitle=ListView
 edu.prz.bomsystem.products.components.ui.ComponentsListView.pageTitle=Components
+edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.pageTitle=Assemblies
+edu.prz.bomsystem.system.ui.StartView.pageTitle=Main page
+
+edu.prz.bomsystem.products.components.ui.ComponentsListView.componentName=Name
+edu.prz.bomsystem.products.components.ui.ComponentsListView.componentVendorName=Vendor
+edu.prz.bomsystem.products.components.ui.ComponentsListView.componentVendorsId=Vendor's ID
+edu.prz.bomsystem.products.components.ui.ComponentsListView.componentParams=Parameters
+edu.prz.bomsystem.products.components.ui.ComponentsListView.componentSize=Size
+edu.prz.bomsystem.products.components.ui.ComponentsListView.componentAdditionalInfo=Additional info
+edu.prz.bomsystem.products.components.ui.ComponentsListView.componentBuyLink=Buy link
+
+
+edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.assemblyName=Assembly name
+edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.assemblyCreateDate=Create date
+edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.cancelButton=Cancel
+edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.saveButton=Save
+edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.editButton=Edit
