--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-edu.prz.bomsystem.authority.ui.user.LoginView.loginDescription=Log in using user/user or admin/admin
+edu.prz.bomsystem.authority.ui.user.LoginView.loginDescription=Log in using testuser/user or admin/admin
 edu.prz.bomsystem.authority.ui.user.LoginView.loginTitle=Log in
 edu.prz.bomsystem.authority.ui.user.LoginView.username=Username
 edu.prz.bomsystem.authority.ui.user.LoginView.password=Password
@@ -21,10 +21,13 @@ edu.prz.bomsystem.products.components.ui.ComponentsListView.componentParams=Para
 edu.prz.bomsystem.products.components.ui.ComponentsListView.componentSize=Size
 edu.prz.bomsystem.products.components.ui.ComponentsListView.componentAdditionalInfo=Additional info
 edu.prz.bomsystem.products.components.ui.ComponentsListView.componentBuyLink=Buy link
-
+edu.prz.bomsystem.products.assemblies.ui.ComponentsListView.cancelButton=Cancel
+edu.prz.bomsystem.products.assemblies.ui.ComponentsListView.saveButton=Save
+edu.prz.bomsystem.products.assemblies.ui.ComponentsListView.editButton=Edit
 
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.assemblyName=Assembly name
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.assemblyCreateDate=Create date
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.cancelButton=Cancel
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.saveButton=Save
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.editButton=Edit
+
