--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -25,9 +25,18 @@ edu.prz.bomsystem.products.assemblies.ui.ComponentsListView.cancelButton=Cancel
 edu.prz.bomsystem.products.assemblies.ui.ComponentsListView.saveButton=Save
 edu.prz.bomsystem.products.assemblies.ui.ComponentsListView.editButton=Edit
 
+edu.prz.bomsystem.products.assemblies.ui.AssembliesDetailedListView.deleteButton=Delete
+edu.prz.bomsystem.products.assemblies.ui.AssembliesDetailedListView.addComponentButton=Add component
+edu.prz.bomsystem.products.assemblies.ui.AssembliesDetailedListView.pageTitle=Assembly
+
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.assemblyName=Assembly name
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.assemblyCreateDate=Create date
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.cancelButton=Cancel
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.saveButton=Save
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.editButton=Edit
 
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.pageTitle=Components
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.name=Component
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.buyLink = Buy link
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.description = Description
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.number = ID
