--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -27,3 +27,13 @@ edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.assemblyCreateDate=D
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.cancelButton=Anuluj
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.saveButton=Zapisz
 edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.editButton=Edytuj
+
+edu.prz.bomsystem.products.assemblies.ui.AssembliesDetailedListView.pageTitle=Montaz
+edu.prz.bomsystem.products.assemblies.ui.AssembliesDetailedListView.addComponentButton=Dodaj komponent
+edu.prz.bomsystem.products.assemblies.ui.AssembliesDetailedListView.deleteButton=Usun
+
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.pageTitle=Komponenty
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.name=Komponent
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.buyLink = Link do kupna
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.description = Opis
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.number = ID
