--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -40,3 +40,8 @@ edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.name=Componen
 edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.buyLink = Buy link
 edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.description = Description
 edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.number = ID
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.editButton = Edit
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.cancelButton = Cancel
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.saveButton = Save
+edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.deleteButton = Delete
+edu.prz.bomsystem.system.ui.MainLayout.assemblies_detail = Assemblies
