--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,39 +9,19 @@ edu.prz.bomsystem.system.ui.MainLayout.signOut=Sign Out
 edu.prz.bomsystem.system.ui.MainLayout.assemblies=Assemblies
 edu.prz.bomsystem.system.ui.MainLayout.components=Components
 
-edu.prz.bomsystem.foundation.ui.view.ListView.pageTitle=ListView
-edu.prz.bomsystem.products.components.ui.ComponentsListView.pageTitle=Components
-edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.pageTitle=Assemblies
 edu.prz.bomsystem.system.ui.StartView.pageTitle=Main page
-
-edu.prz.bomsystem.products.components.ui.ComponentsListView.componentName=Name
-edu.prz.bomsystem.products.components.ui.ComponentsListView.componentVendorName=Vendor
-edu.prz.bomsystem.products.components.ui.ComponentsListView.componentVendorsId=Vendor's ID
-edu.prz.bomsystem.products.components.ui.ComponentsListView.componentParams=Parameters
-edu.prz.bomsystem.products.components.ui.ComponentsListView.componentSize=Size
-edu.prz.bomsystem.products.components.ui.ComponentsListView.componentAdditionalInfo=Additional info
-edu.prz.bomsystem.products.components.ui.ComponentsListView.componentBuyLink=Buy link
-edu.prz.bomsystem.products.assemblies.ui.ComponentsListView.cancelButton=Cancel
-edu.prz.bomsystem.products.assemblies.ui.ComponentsListView.saveButton=Save
-edu.prz.bomsystem.products.assemblies.ui.ComponentsListView.editButton=Edit
-
-edu.prz.bomsystem.products.assemblies.ui.AssembliesDetailedListView.deleteButton=Delete
-edu.prz.bomsystem.products.assemblies.ui.AssembliesDetailedListView.addComponentButton=Add component
-edu.prz.bomsystem.products.assemblies.ui.AssembliesDetailedListView.pageTitle=Assembly
-
-edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.assemblyName=Assembly name
-edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.assemblyCreateDate=Create date
-edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.cancelButton=Cancel
-edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.saveButton=Save
-edu.prz.bomsystem.products.assemblies.ui.AssembliesListView.editButton=Edit
-
-edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.pageTitle=Components
-edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.name=Component
-edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.buyLink = Buy link
-edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.description = Description
-edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.number = ID
-edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.editButton = Edit
-edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.cancelButton = Cancel
-edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.saveButton = Save
-edu.prz.bomsystem.products.components.ui.ComponentDetailedListView.deleteButton = Delete
+edu.prz.bomsystem.products.components.ui.ComponentExpandableGrid.pageTitle = Components
 edu.prz.bomsystem.system.ui.MainLayout.assemblies_detail = Assemblies
+
+edu.prz.bomsystem.foundation.ui.view.GridView.addNewButton = New
+edu.prz.bomsystem.foundation.ui.view.GridView.deleteButton = Delete
+edu.prz.bomsystem.foundation.ui.view.GridView.saveButton = Save
+edu.prz.bomsystem.foundation.ui.view.GridView.editButton = Edit
+
+edu.prz.bomsystem.foundation.ui.view.NewDataDialog.cancelButton = Cancel
+edu.prz.bomsystem.foundation.ui.view.NewDataDialog.saveButton = Save
+
+edu.prz.bomsystem.products.components.ui.ComponentExpandableGrid.name = Name
+edu.prz.bomsystem.products.components.ui.ComponentExpandableGrid.partNumber = Part number
+
+edu.prz.bomsystem.products.components.ui.ComponentDialog.header = Create new component
