--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,3 +8,13 @@ edu.prz.bomsystem.system.ui.MainLayout.signIn=Sign In
 edu.prz.bomsystem.system.ui.MainLayout.signOut=Sign Out
 
 edu.prz.bomsystem.system.ui.StartView.pageTitle=Main page
+
+edu.prz.bomsystem.foundation.ui.view.VersionedGridView.versionColumn=Version
+
+edu.prz.bomsystem.component.ui.ComponentView.catalogId= ID
+edu.prz.bomsystem.component.ui.ComponentView.name = Name
+edu.prz.bomsystem.component.ui.ComponentView.description = Description
+edu.prz.bomsystem.component.ui.ComponentView.type = Type
+edu.prz.bomsystem.component.ui.ComponentView.measure = Measure and unit
+edu.prz.bomsystem.component.ui.ComponentView.cost = Cost
+edu.prz.bomsystem.component.ui.ComponentView.status = Status
