--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,6 +6,7 @@ edu.prz.bomsystem.authority.ui.user.LoginView.loginButton=Log in
 
 edu.prz.bomsystem.system.ui.MainLayout.signIn=Sign In
 edu.prz.bomsystem.system.ui.MainLayout.signOut=Sign Out
+edu.prz.bomsystem.system.ui.MainLayout.components = Components
 
 edu.prz.bomsystem.system.ui.StartView.pageTitle=Main page
 
@@ -18,3 +19,9 @@ edu.prz.bomsystem.component.ui.ComponentView.type = Type
 edu.prz.bomsystem.component.ui.ComponentView.measure = Measure and unit
 edu.prz.bomsystem.component.ui.ComponentView.cost = Cost
 edu.prz.bomsystem.component.ui.ComponentView.status = Status
+edu.prz.bomsystem.component.ui.ComponentView.pageTitle = Components
+edu.prz.bomsystem.component.ui.ComponentView.quantity = Quantity
+
+edu.prz.bomsystem.foundation.ui.view.BasicGridView.dialogHeader = Confirm deletion
+edu.prz.bomsystem.foundation.ui.view.BasicGridView.labelText1 = Are you sure you want to delete
+edu.prz.bomsystem.foundation.ui.view.BasicGridView.labelText2 = item(s)?
