--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -12,16 +12,16 @@ edu.prz.bomsystem.system.ui.StartView.pageTitle=Main page
 
 edu.prz.bomsystem.foundation.ui.view.VersionedGridView.versionColumn=Version
 
-edu.prz.bomsystem.component.ui.ComponentView.catalogId= ID
-edu.prz.bomsystem.component.ui.ComponentView.name = Name
-edu.prz.bomsystem.component.ui.ComponentView.description = Description
-edu.prz.bomsystem.component.ui.ComponentView.type = Type
-edu.prz.bomsystem.component.ui.ComponentView.measure = Measure and unit
-edu.prz.bomsystem.component.ui.ComponentView.cost = Cost
-edu.prz.bomsystem.component.ui.ComponentView.status = Status
-edu.prz.bomsystem.component.ui.ComponentView.pageTitle = Components
-edu.prz.bomsystem.component.ui.ComponentView.quantity = Quantity
+edu.prz.bomsystem.component.ui.ComponentEditableGrid.catalogId= ID
+edu.prz.bomsystem.component.ui.ComponentEditableGrid.name = Name
+edu.prz.bomsystem.component.ui.ComponentEditableGrid.description = Description
+edu.prz.bomsystem.component.ui.ComponentEditableGrid.type = Type
+edu.prz.bomsystem.component.ui.ComponentEditableGrid.measure = Measure and unit
+edu.prz.bomsystem.component.ui.ComponentEditableGrid.cost = Cost
+edu.prz.bomsystem.component.ui.ComponentEditableGrid.status = Status
+edu.prz.bomsystem.component.ui.ComponentEditableGrid.pageTitle = Components
+edu.prz.bomsystem.component.ui.ComponentEditableGrid.quantity = Quantity
 
-edu.prz.bomsystem.foundation.ui.view.BasicGridView.dialogHeader = Confirm deletion
-edu.prz.bomsystem.foundation.ui.view.BasicGridView.labelText1 = Are you sure you want to delete
-edu.prz.bomsystem.foundation.ui.view.BasicGridView.labelText2 = item(s)?
+edu.prz.bomsystem.foundation.ui.view.ComponentEditableGrid.dialogHeader = Confirm deletion
+edu.prz.bomsystem.foundation.ui.view.ComponentEditableGrid.labelText1 = Are you sure you want to delete
+edu.prz.bomsystem.foundation.ui.view.ComponentEditableGrid.labelText2 = item(s)?
