--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,6 +7,7 @@ edu.prz.bomsystem.authority.ui.user.LoginView.loginButton=Log in
 edu.prz.bomsystem.system.ui.MainLayout.signIn=Sign In
 edu.prz.bomsystem.system.ui.MainLayout.signOut=Sign Out
 edu.prz.bomsystem.system.ui.MainLayout.components = Components
+edu.prz.bomsystem.system.ui.MainLayout.modules = Modules
 
 edu.prz.bomsystem.system.ui.StartView.pageTitle=Main page
 
@@ -25,3 +26,5 @@ edu.prz.bomsystem.component.ui.ComponentEditableGrid.quantity = Quantity
 edu.prz.bomsystem.foundation.ui.view.ComponentEditableGrid.dialogHeader = Confirm deletion
 edu.prz.bomsystem.foundation.ui.view.ComponentEditableGrid.labelText1 = Are you sure you want to delete
 edu.prz.bomsystem.foundation.ui.view.ComponentEditableGrid.labelText2 = item(s)?
+
+edu.prz.bomsystem.module.ui.ModuleEditableGridView.pageTitle = Modules
