--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -28,3 +28,13 @@ edu.prz.bomsystem.foundation.ui.view.ComponentEditableGrid.labelText1 = Are you 
 edu.prz.bomsystem.foundation.ui.view.ComponentEditableGrid.labelText2 = item(s)?
 
 edu.prz.bomsystem.module.ui.ModuleEditableGridView.pageTitle = Modules
+edu.prz.bomsystem.mbom.ui.BonEditableGridView.pageTitle = Bons
+
+edu.prz.bomsystem.mbom.ui.BonEditableGrid.date = Date
+edu.prz.bomsystem.mbom.ui.BonEditableGrid.quantity = Quantity
+edu.prz.bomsystem.mbom.ui.BonEditableGrid.status = Status
+edu.prz.bomsystem.mbom.ui.BonEditableGrid.description = Description
+edu.prz.bomsystem.mbom.ui.BonEditableGrid.name = Name
+edu.prz.bomsystem.mbom.ui.BonEditableGrid.catalogId = CatalogID
+
+edu.prz.bomsystem.system.ui.MainLayout.bons = Bons
